@startumluml

enum Role {
  AGENCY_OWNER
  AGENCY_ADMIN
  SUBACCOUNT_USER
  SUBACCOUNT_GUEST
}

enum Icon {
  settings
  chart
  calendar
  check
  chip
  compass
  database
  flag
  home
  info
  link
  lock
  messages
  notification
  payment
  power
  receipt
  shield
  star
  tune
  videorecorder
  wallet
  warning
  headphone
  send
  pipelines
  person
  category
  contact
  clipboardIcon
}

enum TriggerTypes {
  CONTACT_FORM
}

enum ActionType {
  CREATE_CONTACT
}

enum InvitationStatus {
  ACCEPTED
  REVOKED
  PENDING
}

enum Plan {
  price_1PQ8HWRqpSbtJ03827K2PbCM
  price_1PQ8HVRqpSbtJ038LxC6uWrX
}

class User {
  id : String
  name : String
  avatarUrl : String
  email : String
  created_at : DateTime
  updated_at : DateTime
  role : Role
  agencyId : String
  Agency : Agency
  Permission : Permissions[]
  Tickets : Ticket[]
  Notification : Notification[]
}

class Permissions {
  id : String
  email : String
  User : User
  subAccountId : String
  SubAccount : SubAccount
  access : Boolean
}

class Agency {
  id : String
  connectAccountId : String
  customerId : String
  name : String
  agencyLogo : String
  companyEmail : String
  companyPhone : String
  whiteLabel : Boolean
  address : String
  zipCode : String
  state : String
  country : String
  goal : Int
  users : User[]
  createdAt : DateTime
  updatedAt : DateTime
  SubAccount : SubAccount[]
  SidebarOption : AgencySidebarOption[]
  Invitation : Invitation[]
  Notification : Notification[]
  Subscription : Subscription
  AddOns : AddOns[]
}

class SubAccount {
  id : String
  connectAccountId : String
  name : String
  subAccountLogo : String
  createdAt : DateTime
  updatedAt : DateTime
  companyEmail : String
  companyPhone : String
  goal : Int
  address : String
  city : String
  zipCode : String
  state : String
  country : String
  agencyId : String
  Agency : Agency
  SidebarOption : SubAccountSidebarOption[]
  Permissions : Permissions[]
  Funnels : Funnel[]
  Media : Media[]
  Contact : Contact[]
  Trigger : Trigger[]
  Automation : Automation[]
  Pipeline : Pipeline[]
  Tags : Tag[]
  Notification : Notification[]
}

class Tag {
  id : String
  name : String
  color : String
  createdAt : DateTime
  updatedAt : DateTime
  subAccountId : String
  SubAccount : SubAccount
  Ticket : Ticket[]
}

class Pipeline {
  id : String
  name : String
  createdAt : DateTime
  updatedAt : DateTime
  Lane : Lane[]
  SubAccount : SubAccount
  subAccountId : String
}

class Lane {
  id : String
  name : String
  createdAt : DateTime
  updatedAt : DateTime
  Pipeline : Pipeline
  pipelineId : String
  Tickets : Ticket[]
  order : Int
}

class Ticket {
  id : String
  name : String
  createdAt : DateTime
  updatedAt : DateTime
  laneId : String
  order : Int
  Lane : Lane
  value : Decimal
  description : String
  Tags : Tag[]
  customerId : String
  Customer : Contact
  assignedUserId : String
  Assigned : User
}

class Trigger {
  id : String
  name : String
  type : TriggerTypes
  createdAt : DateTime
  updatedAt : DateTime
  subAccountId : String
  Subaccount : SubAccount
  Automations : Automation[]
}

class Automation {
  id : String
  name : String
  createdAt : DateTime
  updatedAt : DateTime
  triggerId : String
  published : Boolean
  Trigger : Trigger
  subAccountId : String
  Subaccount : SubAccount
  Action : Action[]
  AutomationInstance : AutomationInstance[]
}

class AutomationInstance {
  id : String
  createdAt : DateTime
  updatedAt : DateTime
  automationId : String
  Automation : Automation
  active : Boolean
}

class Action {
  id : String
  name : String
  type : ActionType
  createdAt : DateTime
  updatedAt : DateTime
  automationId : String
  Automation : Automation
  laneId : String
  order : Int
}

class Contact {
  id : String
  name : String
  email : String
  createdAt : DateTime
  updatedAt : DateTime
  subAccountId : String
  Subaccount : SubAccount
  Ticket : Ticket[]
}

class Media {
  id : String
  type : String
  name : String
  link : String
  createdAt : DateTime
  updatedAt : DateTime
  subAccountId : String
  Subaccount : SubAccount
}

class Funnel {
  id : String
  name : String
  createdAt : DateTime
  updatedAt : DateTime
  description : String
  published : Boolean
  subDomainName : String
  favicon : String
  subAccountId : String
  SubAccount : SubAccount
  FunnelPages : FunnelPage[]
  liveProducts : String
  ClassName : ClassName[]
}

class ClassName {
  id : String
  name : String
  color : String
  createdAt : DateTime
  updatedAt : DateTime
  funnelId : String
  customData : String
  Funnel : Funnel
}

class FunnelPage {
  id : String
  name : String
  pathName : String
  createdAt : DateTime
  updatedAt : DateTime
  visits : Int
  content : String
  order : Int
  previewImage : String
  funnelId : String
  Funnel : Funnel
}

class AgencySidebarOption {
  id : String
  name : String
  link : String
  icon : Icon
  agencyId : String
  Agency : Agency
  createdAt : DateTime
  updatedAt : DateTime
}

class SubAccountSidebarOption {
  id : String
  name : String
  link : String
  icon : Icon
  createdAt : DateTime
  updatedAt : DateTime
  SubAccount : SubAccount
  subAccountId : String
}

class Invitation {
  id : String
  email : String
  agencyId : String
  Agency : Agency
  status : InvitationStatus
  role : Role
}

class Notification {
  id : String
  notification : String
  agencyId : String
  subAccountId : String
  userId : String
  User : User
  Agency : Agency
  SubAccount : SubAccount
  createdAt : DateTime
  updatedAt : DateTime
}

class Subscription {
  id : String
  createdAt : DateTime
  updatedAt : DateTime
  plan : Plan
  price : String
  active : Boolean
  priceId : String
  customerId : String
  currentPeriodEndDate : DateTime
  subscritiptionId : String
  agencyId : String
  Agency : Agency
}

class AddOns {
  id : String
  createdAt : DateTime
  updatedAt : DateTime
  name : String
  active : Boolean
  priceId : String
  agencyId : String
  Agency : Agency
}

User --|{ Permissions
User }|--o Ticket
User }|--o Notification
Agency --|{ User
Agency --|{ SubAccount
Agency --|{ SidebarOption
Agency --|{ Invitation
Agency --|{ Notification
Agency }|--o Subscription
Agency --|{ AddOns
SubAccount --|{ Permissions
SubAccount }|--o Funnels
SubAccount --|{ Media
SubAccount --|{ Contact
SubAccount --|{ Trigger
SubAccount --|{ Automation
SubAccount --|{ Pipeline
SubAccount --|{ Tags
SubAccount --|{ Notification
Pipeline }|--o Lane
Lane }|--o Ticket
Trigger }|--o Automation
Trigger --|{ Automation
Automation }|--o Action
Automation --|{ AutomationInstance
Action }|--o Contact
Action --|-- Contact
Media --|--o SubAccount
Tag --|-- Ticket
Funnel --|-- FunnelPage
Funnel --|{ ClassName
FunnelPage --|-- Funnel
AgencySidebarOption --|-- Agency
SubAccountSidebarOption --|-- SubAccount
Invitation --|-- Agency
Notification --|-- User
Notification --|-- Agency
Notification --|-- SubAccount
Subscription --|-- Agency
AddOns --|-- Agency

@enduml
